# i-beg-to-differ

./: .gitignore  README.md  pyproject.toml  requirements.txt
i_beg_to_differ/core/: __init__.py  ib2d_file.py  ib2d_file_element.py  wildcards.py
i_beg_to_differ/core/compare_set/: __init__.py
i_beg_to_differ/core/data_sources/: __init__.py  data_source.py
i_beg_to_differ/core/field_transforms/: __init__.py
i_beg_to_differ/core/ib2d_file/: __init__.py  ib2d_file_element.py
i_beg_to_differ/core/registered_types/: __init__.py  registered_type.py
i_beg_to_differ/core/wildcards/: __init__.py  wildcard_field.py
sample/: main.py
sandbox/: main.py
src/i_beg_to_differ/: __main__.py
src/i_beg_to_differ/core/: __init__.py  base.py
src/i_beg_to_differ/ui/: __init__.py
src/i_beg_to_differ/ui/model/: base.py  (+4 more)
tests/: __init__.py  compare_benchmarks.py  conftest.py  fixture_csv_benchmarks.py  fixture_excel_file_benchmarks.py  fixture_ib2d_file.py  fixture_logger.py  fixture_parquet_benchmarks.py  fixture_parquet_files.py  test_automatch_primary_keys_automatch_data_fields.py  test_automatch_primary_keys_empty_data_fields.py  test_compare_rule_custom_python.py  test_compare_rule_equals.py  test_compare_rule_numeric_tolerance.py  test_core.py  test_data_source_sqlite.py  test_data_type_conversion.py  test_data_type_promotion.py  test_duplicate_primary_keys.py  test_field_transform_convert_string_lowercase.py  test_field_transform_convert_string_uppercase.py  test_field_transform_custom_python.py  test_field_transform_replace_null_with_numeric.py  test_field_transform_replace_null_with_string.py  test_field_transform_strip_whitespace.py  test_primary_keys_automatch_data_fields.py  test_primary_keys_empty_data_fields.py  test_python_edit.py  test_report_csv.py  test_report_excel.py  test_serialize_ib2d_file.py
tests/test_artifacts/test_automatch_primary_keys_automatch_data_fields/: test.csv  test_automatch_primary_keys_automatch_data_fields.ib2d
tests/test_artifacts/test_automatch_primary_keys_empty_data_fields/: test.xlsx  test_automatch_primary_keys_empty_data_fields.ib2d
tests/test_artifacts/test_compare_rule_custom_python/: test_compare_rule_custom_python.ib2d
tests/test_artifacts/test_compare_rule_equals/: source_duplicate_records.parquet  target_only_records.parquet  test.csv  test.xlsx
tests/test_artifacts/test_compare_rule_numeric_tolerance/: target_only_records.parquet  test_compare_rule_numeric_tolerance.ib2d  values_comparison.parquet
tests/test_artifacts/test_core/: test.ib2d
tests/test_artifacts/test_data_source_sqlite/: test.db  test_data_source_sqlite.ib2d
tests/test_artifacts/test_data_type_conversion/: test.xlsx  test_data_type_conversion.ib2d
tests/test_artifacts/test_data_type_promotion/: test.db  test_data_type_promotion.ib2d
tests/test_artifacts/test_duplicate_primary_keys/: test.csv  test.xlsx
tests/test_artifacts/test_field_transform_convert_string_lowercase/: test.csv  test.xlsx  test_field_transform_convert_string_lowercase.ib2d
tests/test_artifacts/test_field_transform_convert_string_uppercase/: test.csv  test_field_transform_convert_string_uppercase.ib2d
tests/test_artifacts/test_field_transform_custom_python/: test_field_transform_custom_python.ib2d
tests/test_artifacts/test_field_transform_replace_null_with_numeric/: test.db  test_field_transform_replace_null_with_numeric.ib2d
tests/test_artifacts/test_field_transform_replace_null_with_string/: test.db  test_field_transform_replace_null_with_string.ib2d
tests/test_artifacts/test_field_transform_strip_whitespace/: test.xlsx  test_field_transform_strip_whitespace.ib2d
tests/test_artifacts/test_primary_keys_automatch_data_fields/: test_primary_keys_automatch_data_fields.ib2d
tests/test_data/: test_data.ib2d
(+384 files in other folders)
