[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[build-system]
requires = [
  "setuptools",
  "setuptools-scm"
]
build-backend = "setuptools.build_meta"

[project]
name = "i-beg-to-differ"
authors = [
  {name = "Michael Ching", email = "chingdaotze@yahoo.com"}
]
description = "Tabular comparison application, powered by Pandas."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = [
  "compare",
  "table",
  "dataframe",
  "testware",
  "pandas"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Database",
  "Topic :: Office/Business :: Financial",
  "Topic :: Office/Business :: Financial :: Spreadsheet",
  "Topic :: Software Development :: Testing"
]
dynamic = [
  "version",
]
dependencies = [
  "openpyxl>=3.1.5",
  "pandas>=2.2.3",
  "pyarrow>=17.0.0",
  "SQLAlchemy>=2.0.35",
  "psutil>=6.0.0",
  "typer>=0.12.5",
  "PySide6>=6.8.0.1"
]

[project.urls]
Homepage = "https://i-beg-to-differ.readthedocs.io/en/latest/index.html"
Documentation = "https://i-beg-to-differ.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/chingdaotze/i-beg-to-differ.git"
Issues = "https://github.com/chingdaotze/i-beg-to-differ/issues"
Changelog = "https://github.com/chingdaotze/i-beg-to-differ/blob/main/CHANGELOG.md"

[project.scripts]
i-beg-to-differ-cli = "i_beg_to_differ.__main__:cli"

[project.gui-scripts]
i-beg-to-differ = "i_beg_to_differ.__main__:gui"

[tool.setuptools_scm]
